--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,7 +18,44 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
 </head>
 
-<body ng-controller="indexController">
+<!-- run init() on page load -->
+<body ng-controller="indexController" data-ng-init="init()">
+    <!-- navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a  class="navbar_text navbar-brand page-scroll" href="/#title_screen">Word Choice</a>
+            </div>
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <li ng-repeat="link in left_side_navbar_links">
+                         <a class="page-scroll navbar_text" 
+                         ng-click="link.behavior"
+                         ng-href="{{ link.url }}">
+                            {{link.name}}
+                         </a>
+                    </li>
+                </ul>
+                 <ul class="nav navbar-nav navbar-right">
+                    <li ng-repeat="link in right_side_navbar_links">
+                         <a class="page-scroll navbar_text" 
+                         ng-click='signOut()'
+                         href="{{link.url}}">
+                            {{link.name}}
+                         </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- navbar -->
+
     <div id = "title_screen" class = "container">
         <div class = "row">
             <div id = "titles_container">
