--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/signin.css">
+    <link rel="stylesheet" href="css/animate.min.css">
 
     <!-- FONTS -->
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
@@ -17,7 +18,42 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
 
-<body ng-controller="signinController">
+<body ng-controller="signinController" data-ng-init="init()">
+    <!-- navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a  class="navbar_text navbar-brand page-scroll" href="/#title_screen">Word Choice</a>
+            </div>
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    <li ng-repeat="link in left_side_navbar_links">
+                         <a class="page-scroll navbar_text" 
+                         ng-click="link.behavior"
+                         ng-href="{{ link.url }}">
+                            {{link.name}}
+                         </a>
+                    </li>
+                </ul>
+                 <ul class="nav navbar-nav navbar-right">
+                    <li ng-repeat="link in right_side_navbar_links">
+                         <a class="page-scroll navbar_text" 
+                         ng-click='signOut()'
+                         href="{{link.url}}">
+                            {{link.name}}
+                         </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- navbar -->
     <div id = "user_inputs" class = "container">
         <div class = "row">
             <div class = "col-sm-5 line_container">
@@ -39,7 +75,7 @@
                             <input ng-model = "sign_in_username" class = "form-control input-lg input_fields" type = "text" placeholder = "Username">
                         </div>
                         <div id = "password_padding_sign_in" class = "row input_container">
-                            <input ng-model = "sign_in_password" class = "form-control input-lg input_fields" type ="text" placeholder = "Password">
+                            <input ng-model = "sign_in_password" class = "form-control input-lg input_fields" type ="password" placeholder = "Password">
                         </div>
                         <div class = "row text-center input_container">
                             <button type = "submit" class="btn btn-warning btn-large" id = "sign_in_btn">Sign in</button>
@@ -55,7 +91,7 @@
                             <input class = "form-control input-lg input_fields" type = "text" ng-model = "sign_up_username" placeholder = "Username">
                         </div>
                         <div class = "row input_container">
-                            <input class = "form-control input-lg input_fields" type = "text" ng-model = "sign_up_password" placeholder = "Password">
+                            <input class = "form-control input-lg input_fields" type = "password" ng-model = "sign_up_password" placeholder = "Password">
                         </div>
                         <div class = "row input_container">
                             <input class = "form-control input-lg input_fields" type = "text" ng-model = "sign_up_email" placeholder = "Email (optional)">
@@ -72,12 +108,15 @@
         </div>
     </div>
 
+
     <!-- SCRIPTS -->
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
   
+    <script src="js/bootstrap-notify.min.js"></script>
+
 
     <!-- CONTROLLER -->
     <script type="text/javascript" src="/signin.client.controller.js"></script>
