--- a/public/css/writing_analyzer.css
+++ b/public/css/writing_analyzer.css
@@ -1,3 +1,7 @@
+.navbar_text {
+	font-family: 'Montserrat', serif;
+}
+
 body {
 	background-color: #1ABC9C;
 }
@@ -40,7 +44,7 @@ a:active {
 }
 
 #line_section {
-	padding-top: 20px;
+	padding-top: 55px;
 	padding-bottom: 15px;
 }
 
