adding graph generation and changing http request method

--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -94,7 +94,7 @@
                             <input class = "form-control input-lg input_fields" type = "password" ng-model = "sign_up_password" placeholder = "Password">
                         </div>
                         <div class = "row input_container">
-                            <input class = "form-control input-lg input_fields" type = "text" ng-model = "sign_up_email" placeholder = "Email (optional)">
+                            <input class = "form-control input-lg input_fields" type = "text" ng-model = "sign_up_email" placeholder = "Email">
                         </div>
                         <div class = "row input_container">
                             <p class = "input_fields">By signing up, you agree to our <a id = "terms" href = "/terms" target = "_blank"> terms and services. </a></p>
