--- a/app/views/writing_analyzer.html
+++ b/app/views/writing_analyzer.html
@@ -76,10 +76,11 @@
                         <div class = "row">
                             <div id = "analyze_btn_container" class = "col-sm-12">
                                 <button type = "submit" class="pull-right btn btn-success btn-large" id = "analyze_btn">Analyze!</button>
-                                <p>The complete analysis of your article is avaliable <a class = "terms" href = "#">here!</a></p>
+                                <p>Note: Only correctly spelled, non-structure English words are included in your analysis.</p>
                             </div>
                         </div>
-                        <div id = "analysis_row" class = "row">
+                        <div id = "analysis_row" class = "row">  
+                            <hr>
                             <p id = "analysis"></p>
                         </div>
                     </div>
@@ -97,6 +98,15 @@
 
 
     <!-- SCRIPTS -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-68110579-1', 'auto');
+      ga('send', 'pageview');
+    </script>
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/angular.min.js"></script>
