--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,4 @@
+
 .navbar_text {
 	font-family: 'Montserrat', serif;
 }
@@ -138,6 +139,7 @@
 
 #graph_pic_container {
 	text-align: center;
+	padding-left: 7%;
 }
 
 body {
