adding comments and code refactoring - version 1.0 is ready!

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -81,18 +81,21 @@
 
     <div id = "content-screen">
         <div id = "about_content" class = "container">
-        <div class = "row">
-            <div class = "col-sm-5 line_container">
-                <div class="hr line"></div>
+            <!-- logo -->
+            <div class = "row">
+                <div class = "col-sm-5 line_container">
+                    <div class="hr line"></div>
+                </div>
+                <div class = "col-sm-2">
+                    <a href = '/'><img id = "logo" src = "assets/img/logo.png"></a>
+                </div>
+                <div class = "col-sm-5  line_container">
+                    <div class="hr line"></div>
+                </div>
             </div>
-            <div class = "col-sm-2">
-                <a href = '/'><img id = "logo" src = "assets/img/logo.png"></a>
-            </div>
-            <div class = "col-sm-5  line_container">
-                <div class="hr line"></div>
-            </div>
-        </div>
+            <!-- logo 00 -->
 
+            <!-- ABOUT content -->
             <h2 id = "about_title">ABOUT</h2>
             <div  class = "row">
                 <div class = "col-sm-6">
@@ -115,6 +118,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer -->
         <div  id = "try_it" class = "container">
             <a href="/writing_analyzer" class="btn btn-warning btn-large" id = "try_it_content"><i class="icon-white icon-pencil"></i> Try it now! </a>
         </div>
