--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -56,6 +56,7 @@
     <!-- navbar -->
     
     <div class = "container">
+        <!-- logo -->
         <div  id = "line_row" class = "row">
             <div class = "col-sm-5 line_container">
                 <div class="hr line"></div>
@@ -67,6 +68,9 @@
                 <div class="hr line"></div>
             </div>
         </div>
+        <!-- logo -->
+
+        <!-- Profile Container -->
         <div id = "profile_container" class = "row">
             <h1 class = "animated bounceInDown">Welcome, {{ username }}</h1>
             <div class = "animated bounceInUp">
@@ -75,11 +79,7 @@
                 <h6 id = "noArticlesAnalyzedBefore"> Analyze an article first! </h6>
                 <canvas id="myBarChart" width="800" height="400"></canvas>
             </div>
-
-
-
         </div>
-
     </div>
 
     <!-- SCRIPTS -->
