--- a/app/views/signin.html
+++ b/app/views/signin.html
@@ -55,6 +55,7 @@
     </nav>
     <!-- navbar -->
     <div id = "user_inputs" class = "container">
+        <!-- logo -->
         <div class = "row">
             <div class = "col-sm-5 line_container">
                 <div class="hr line"></div>
@@ -67,6 +68,7 @@
             </div>
         </div>
         <div class = "row">
+            <!--Sign in -->
             <div class = "col-sm-6">
                 <div id = "sign_in" class = "container">
                     <form ng-submit = "sign_in()">
@@ -83,6 +85,7 @@
                     </form>
                 </div>
             </div>
+            <!-- Sign up -->
             <div class = "col-sm-6">
                 <div  id = "sign_up" class = "container">
                     <h1 class = "sign_titles">Sign up</h1>
