--- a/app/views/terms.html
+++ b/app/views/terms.html
@@ -19,6 +19,7 @@
 
 <body>
     <div id = "content_container" class = "container">
+        <!-- Terms and conditions -->
         <div  class = "row">
             <div class = "col-sm-12" id = "terms_container">
                 <h1>TERMS AND CONDITIONS</h1>
