--- a/app/views/writing_analyzer.html
+++ b/app/views/writing_analyzer.html
@@ -54,6 +54,7 @@
     </nav>
     <!-- navbar -->
     <div class = "container">
+        <!-- logo -->
         <div id = "line_section" class = "row">
             <div class = "col-sm-5 line_container">
                 <div class="hr line"></div>
@@ -65,7 +66,10 @@
                 <div class="hr line"></div>
             </div>
         </div>
+        <!-- logo -->
         <div class = "row">
+
+            <!-- Article submit column -->
             <div  id = "left_column" class = "col-sm-6">
                 <form ng-submit = "submitArticle()">
                     <div id = "text_submit">
@@ -85,8 +89,9 @@
                         </div>
                     </div>
                 </form>
-
             </div>  
+
+            <!-- Graph result column -->
             <div id = "right_column" class = "col-sm-6">
                 <div id = "graph_display">
                     <h1 id = "graph_title">Most used Words: </h1>
