--- a/app/views/index.html
+++ b/app/views/index.html
@@ -101,7 +101,7 @@
                 <div class = "col-sm-6">
                     Do you find your essay to be boring, repetitive, or bland? Maybe you need to spice it up by improving your <i>word choice</i>? Diction is an important part of writing. Using a wide variety of words helps create more vivid imagery for the reader. At Word Choice, we allow you to do just that - <i>diversify your writing</i>.
                     <br><br>
-                    Word Choice is a tool that analyzes submitted articles and suggests synonms for frequently used words. A histogram is created in order to help users visualize their data and a list of synonms is generated thanks to the thesaurus service provided by <a target="_blank"  href = "words.bighugelabs.com">words.bighugelabs.com</a>. <strong>Please be courteous with the number and size of article submissions as we have limited API calls!</strong>
+                    Word Choice is a tool that analyzes submitted articles and suggests synonyms for frequently used words. A histogram is created in order to help users visualize their data and a list of synonyms is generated thanks to the thesaurus service provided by <a target="_blank"  href = "https://words.bighugelabs.com/">words.bighugelabs.com</a>. <strong>Please be courteous with the number and size of article submissions as we have limited API calls!</strong>
                     <br><br>
                     Get started now by clicking "Analyze your writing" on the header or by creating an account. By creating an account, Word Choice can track your most frequently used words. 
                     <br><br>
