--- a/app/views/terms.html
+++ b/app/views/terms.html
@@ -36,7 +36,7 @@
                     OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
                     SOFTWARE.
                     <br><br> 
-                    This product is licensed under the MIT license and  <a target="_blank"  class = "terms"  href="https://github.com/isNPComplete/word_choice">source code</a> is avaliable. By using our service, you also agree to the terms and conditions at <a class ="terms" target="_blank"  href = "words.bighugelabs.com">words.bighugelabs.com </a>.
+                    This product is licensed under the MIT license and  <a target="_blank"  class = "terms"  href="https://github.com/isNPComplete/word_choice">source code</a> is avaliable. By using our service, you also agree to the terms and conditions at <a class ="terms" target="_blank"  href = "https://words.bighugelabs.com/">words.bighugelabs.com </a>.
                 </p>
             </div>
         </div>
